--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,9 @@
 {
+  "plugins": [
+    "stylelint-scss"
+  ],
   "extends": [
-    "stylelint-config-recommended",
+    "stylelint-config-recommended-scss",
     "stylelint-prettier/recommended",
   ],
 }
