--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "prettier": "^1.18.2",
     "sass": "^1.23.3",
     "stylelint": "^11.1.1",
+    "stylelint-scss": "^3.12.1",
     "stylelint-config-prettier": "^6.0.0",
     "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-recommended-scss": "^4.0.0",
     "stylelint-prettier": "^1.1.1"
+  },
+  "dependencies": {
+    "lottie-web": "^5.5.9",
+    "pako": "^1.0.10"
   }
 }
